# Polyglot

./: README.md  package-lock.json  package.json
backend/: app.py  env.example  pyproject.toml
backend/engine/: translator.py
src/app/: layout.tsx  page.tsx
src/app/api/translate/: route.ts
src/app/api/transpile/: route.ts
src/components/: LanguageSelector.tsx  TranslationCanvas.tsx
src/engine/: Translator.ts  Visitor.ts  types.ts
src/hooks/: useTranslation.ts
